# sumo-robot-firmware

./: CMakeLists.txt  LICENSE
components/config/: CMakeLists.txt
components/config/include/: pin_config.h
components/ir_sensor/: CMakeLists.txt
components/ir_sensor/include/: ir_sensor.h
components/ir_sensor/src/: ir_sensor.c
components/motor_driver/: CMakeLists.txt
components/motor_driver/include/: motor_driver.h
components/motor_driver/src/: motor_driver.c
components/robot_controller/: CMakeLists.txt
components/robot_controller/include/: robot_controller.h
components/robot_controller/src/: robot_controller.c
components/ultrasonic/: CMakeLists.txt
components/ultrasonic/include/: ultrasonic.h
components/ultrasonic/src/: ultrasonic.c
components/wifi_remote/: CMakeLists.txt
components/wifi_remote/include/: wifi_remote.h
components/wifi_remote/src/: wifi_remote.c
main/: CMakeLists.txt  main.c
